[gd_scene load_steps=4 format=3 uid="uid://d34x55wbkoid1"]

[ext_resource type="Theme" uid="uid://vspng5affrpu" path="res://client/theme/default.tres" id="1_ktrx4"]
[ext_resource type="Script" path="res://client/scenario/PE/menu/friends_tab.gd" id="2_cma6c"]
[ext_resource type="Texture2D" uid="uid://ciyfosf5deglj" path="res://client/UI/red_point.png" id="3_rj67g"]

[node name="FriendsTab" type="TextureButton"]
custom_minimum_size = Vector2(0, 160)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.0985222
size_flags_horizontal = 3
theme = ExtResource("1_ktrx4")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_cma6c")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="AvatarTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.213333
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="nameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.244
anchor_top = 0.11875
anchor_right = 0.968
anchor_bottom = 0.575
theme_override_font_sizes/font_size = 30
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="LastChatLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.242667
anchor_top = 0.5875
anchor_right = 0.964
anchor_bottom = 0.93125
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="RedPointTextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.869333
anchor_top = 0.24186
anchor_right = 0.988
anchor_bottom = 0.655814
texture = ExtResource("3_rj67g")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="UnreadLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.889333
anchor_top = 0.311628
anchor_right = 0.972
anchor_bottom = 0.586047
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
